[tool.poetry]
name = "comcli"
version = "0.1.0"
description = ""
authors = ["kururu_miguel <justmike9139@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynacl = "^1.6.2"
uni-curses = "^3.1.2"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
